@@ -308,6 +308,20 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicReference
+import|;
+end_import
+
+begin_import
+import|import
 name|com
 operator|.
 name|google
@@ -8634,20 +8648,25 @@ operator|.
 name|getCoreNodeName
 argument_list|()
 decl_stmt|;
-assert|assert
+if|if
+condition|(
 name|coreNodeName
-operator|!=
+operator|==
 literal|null
-operator|:
-literal|"SolrCore: "
+condition|)
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"No coreNodeName for "
 operator|+
 name|cd
-operator|.
-name|getName
-argument_list|()
-operator|+
-literal|" has no coreNodeName"
-assert|;
+argument_list|)
+throw|;
 if|if
 condition|(
 name|cloudDesc
@@ -8666,63 +8685,81 @@ name|ErrorCode
 operator|.
 name|SERVER_ERROR
 argument_list|,
-literal|"No shard id for :"
+literal|"No shard id for "
 operator|+
 name|cd
 argument_list|)
 throw|;
 block|}
-name|long
-name|endTime
-init|=
-name|System
-operator|.
-name|nanoTime
-argument_list|()
-operator|+
-name|TimeUnit
-operator|.
-name|NANOSECONDS
-operator|.
-name|convert
-argument_list|(
-literal|3
-argument_list|,
-name|TimeUnit
-operator|.
-name|SECONDS
-argument_list|)
-decl_stmt|;
+name|AtomicReference
+argument_list|<
 name|String
-name|errMessage
+argument_list|>
+name|errorMessage
 init|=
-literal|null
-decl_stmt|;
-while|while
-condition|(
-name|System
-operator|.
-name|nanoTime
+operator|new
+name|AtomicReference
+argument_list|<>
 argument_list|()
-operator|<
-name|endTime
-condition|)
-block|{
-name|Slice
-name|slice
+decl_stmt|;
+name|AtomicReference
+argument_list|<
+name|DocCollection
+argument_list|>
+name|collectionState
 init|=
+operator|new
+name|AtomicReference
+argument_list|<>
+argument_list|()
+decl_stmt|;
+try|try
+block|{
 name|zkStateReader
 operator|.
-name|getClusterState
-argument_list|()
-operator|.
-name|getSlice
+name|waitForState
 argument_list|(
 name|cd
 operator|.
 name|getCollectionName
 argument_list|()
 argument_list|,
+literal|3
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|,
+parameter_list|(
+name|n
+parameter_list|,
+name|c
+parameter_list|)
+lambda|->
+block|{
+name|collectionState
+operator|.
+name|set
+argument_list|(
+name|c
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|c
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+name|Slice
+name|slice
+init|=
+name|c
+operator|.
+name|getSlice
+argument_list|(
 name|cloudDesc
 operator|.
 name|getShardId
@@ -8736,29 +8773,22 @@ operator|==
 literal|null
 condition|)
 block|{
-name|errMessage
-operator|=
-literal|"Invalid slice : "
+name|errorMessage
+operator|.
+name|set
+argument_list|(
+literal|"Invalid shard: "
 operator|+
 name|cloudDesc
 operator|.
 name|getShardId
 argument_list|()
-expr_stmt|;
-continue|continue;
-block|}
-if|if
-condition|(
-name|slice
-operator|.
-name|getReplica
-argument_list|(
-name|coreNodeName
 argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
 name|Replica
 name|replica
 init|=
@@ -8769,6 +8799,33 @@ argument_list|(
 name|coreNodeName
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|replica
+operator|==
+literal|null
+condition|)
+block|{
+name|errorMessage
+operator|.
+name|set
+argument_list|(
+literal|"coreNodeName "
+operator|+
+name|coreNodeName
+operator|+
+literal|" does not exist in shard "
+operator|+
+name|cloudDesc
+operator|.
+name|getShardId
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+literal|false
+return|;
+block|}
 name|String
 name|baseUrl
 init|=
@@ -8811,44 +8868,56 @@ argument_list|()
 argument_list|)
 condition|)
 block|{
-return|return;
+return|return
+literal|true
+return|;
 block|}
-else|else
-block|{
-name|errMessage
-operator|=
-literal|"replica with coreNodeName "
+name|errorMessage
+operator|.
+name|set
+argument_list|(
+literal|"coreNodeName "
 operator|+
 name|coreNodeName
 operator|+
-literal|" exists but with a different name or base_url"
+literal|" exists, but does not match expected node or core name"
+argument_list|)
 expr_stmt|;
+return|return
+literal|false
+return|;
 block|}
-block|}
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|100
 argument_list|)
 expr_stmt|;
 block|}
+catch|catch
+parameter_list|(
+name|TimeoutException
+name|e
+parameter_list|)
+block|{
+name|String
+name|error
+init|=
+name|errorMessage
+operator|.
+name|get
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
-name|errMessage
+name|error
 operator|==
 literal|null
 condition|)
-block|{
-name|errMessage
+name|error
 operator|=
-literal|"replica "
+literal|"Replica "
 operator|+
 name|coreNodeName
 operator|+
 literal|" is not present in cluster state"
 expr_stmt|;
-block|}
 throw|throw
 operator|new
 name|SolrException
@@ -8857,24 +8926,17 @@ name|ErrorCode
 operator|.
 name|SERVER_ERROR
 argument_list|,
-name|errMessage
+name|error
 operator|+
-literal|". state : "
+literal|": "
 operator|+
-name|zkStateReader
+name|collectionState
 operator|.
-name|getClusterState
+name|get
 argument_list|()
-operator|.
-name|getCollection
-argument_list|(
-name|cd
-operator|.
-name|getCollectionName
-argument_list|()
-argument_list|)
 argument_list|)
 throw|;
+block|}
 block|}
 block|}
 DECL|method|waitForLeaderToSeeDownState
